--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <li><a onclick="menuTextClick()" id="menu-a" href="#jamoa">Yangiliklar</a></li>
                         <li><a onclick="menuTextClick()" id="menu-a" href="#Ma'muriyat">Ma'muriyat</a></li>
                         <li><a onclick="menuTextClick()" id="menu-a" href="#aloqa">Ma'lumot</a></li>
-                        <li><a onclick="menuTextClick()" id="menu-a" href="#aloqa">Aloqa</a></li>
+                        <li><a onclick="menuTextClick()" id="menu-a" href="+998946060606">Aloqa</a></li>
                         
                     </ul>
                 </div>
